# RVC-HA

./: .gitignore  DGN Summary Table.md  Dimmer_RV-C.pl script.md  README.md  RVC loaded instance names for devices.md  RVC-CAN-Commands.md  Updated Plan and Specification for RV-C .md  ac_controller.py  ac_node_red_flow.json  accontrol.md  basic_config.yaml  can.txt  complete_json_lights.yaml  configuration.yaml  corrected_lights.yaml  debug_mqtt.py  docker-compose.node-red.yml  docker-compose.yml  final_config.yaml  final_lights.yaml  fixed_configuration.yaml  fixed_light_config.yaml  fixed_lights.yaml  ha-restart.yml  ha_api_helper.sh  ha_config_update.yaml  ha_token.sh  home_assistant_config.yaml  improved_light_config.yaml  index.html  json_light_config.yaml  light_control_commands.md  minimal_config.yaml  mosquitto-websockets.conf  mqtt.yaml  mqtt_light_control.py  mqtt_lights.yaml  mqtt_lights_fixed.yaml  mqttrvc.js  new_lights.yaml  (+37 more)
backend/: .env.example  API_DOCUMENTATION.md  Dockerfile  README.md  package-lock.json  package.json  server.js  test-setup.js
examples/: README.md  homeassistant-lights.yaml
fixes/: api-command-routing-middleware-fix.md  api-endpoint-routing-issues.md  fix_deviceStates_reference_error.md  home-assistant-integration-loading.md  (+17 more)
ha_mcp_agent/: .gitignore  README.md  main.py  pyproject.toml  requirements.md
ha_mcp_agent/ha_mcp_agent/: main.py
ha_mcp_agent/ha_mcp_agent/api/: device.py
ha_mcp_agent/ha_mcp_agent/core/: mcp_client.py
ha_mcp_agent/ha_mcp_agent/static/: devices.js  index.html
ha_mcp_agent/tests/: test_health.py
(+70 files in other folders)
