[tool.poetry]
name = "ha-mcp-agent"
version = "0.1.0"
description = "Agentic Home Assistant MCP API service"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [
    { include = "ha_mcp_agent", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.110.0"
pydantic = "^2.6.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
